--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -1411,7 +1411,7 @@ a.bg-danger:focus {
   display: none;
 }
 [dir=rtl] .slick-slide {
-  float: right;
+  float: left;
 }
 .slick-slide img {
   display: block;
@@ -1436,6 +1436,11 @@ a.bg-danger:focus {
 
 .slick-arrow.slick-hidden {
   display: none;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  direction: ltr;
 }
 
 /*
