--- a/src/sass/plugins/_rrze-glossary.scss
+++ b/src/sass/plugins/_rrze-glossary.scss
@@ -20,7 +20,8 @@
 	    border: 1px solid var(--color-StandardHellgrau);
 	  
 	    span {
-		 color: var(--color-TextLight);
+		 	//color: var(--color-TextLight);
+			color: var(--color-Text);
 	    }
 	    span, a {
 		@include px2rem($font-size-textbuttons);
