--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.3.34-316
+Version: 2.3.34-318
 Requires at least: 6.1
 Tested up to: 6.2
 Requires PHP: 8.0
@@ -9447,6 +9447,7 @@ body.nav-toggled #headerwrapper {
   padding: 2px 5px 1px 6px;
   border-radius: var(--border-radius);
   cursor: pointer;
+  z-index: 999;
 }
 .meta-search .search-initiate-button.active {
   display: none;
