--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -197,6 +197,203 @@
     }
 }
 
+
+
+.navsmall {
+    @include no-list;
+
+    /* All links & buttons */
+    a, [type=button] {
+        margin: 5px 0 0 0;
+        text-decoration: none;
+        font-weight: bold;
+        color: var(--color-mainmenu-toplevel-text);
+        background: var(--color-mainmenu-toplevel-bg);
+
+        &:hover,
+        &:focus,
+        &[aria-expanded=true] {
+            color: var(--color-mainmenu-toplevel-hover-text);
+            background: var(--color-mainmenu-toplevel-hover-bg);
+            text-decoration: none;
+        }
+
+
+    }
+
+    [type="button"].current-menu-ancestor {
+        color: var(--color-mainmenu-toplevel-hover-text);
+        background: var(--color-mainmenu-toplevel-hover-bg);
+    }
+
+
+    li.level1.has-sub:hover > a {
+        color: var(--color-mainmenu-toplevel-bg);
+        background: var(--color-mainmenu-toplevel-hover-bg);
+    }
+
+    /* First-level items */
+    > li {
+        @include no-list;
+
+        /* Primary navigation toggle links / buttons */
+        > a,
+        > [type=button] {
+            display: block;
+            position: relative;
+            @include px2rem($font-size-nav-mainlinks);
+            font-weight: bold;
+            padding: 10px 15px;
+
+            /* Necessary for force-click toggle buttons */
+            border: none;
+            background-color: transparent;
+            text-align: left;
+            width: 100%;
+        }
+
+        &.has-sub {
+            > a,
+            > [type=button] {
+                padding-bottom: 10px;
+                padding-right: 28px;
+                margin-bottom: 0;
+
+                &:before {
+                    @extend .fa;
+                    @extend .fa-caret-down;
+                    position: absolute;
+                    top: 11px;
+                    right: 15px;
+                    display: none;
+                    transition: transform .2s ease-in-out;
+                }
+            }
+            &:hover {
+                > a {
+                    @include border-bottom-radius(0);
+                }
+            }
+
+            body:not(.mainnav-forceclick):not(.ismobile) & {
+                > a:focus ~ .nav-flyout,
+                > [type=button]:focus ~ .nav-flyout,
+                &:hover .nav-flyout {
+                    display: block;
+                }
+            }
+
+            /* Must be an extra selector as IE / Edge doesn't support :focus-within and considers this invalid */
+            body:not(.mainnav-forceclick):not(.ismobile) &:focus-within .nav-flyout {
+                display: block;
+            }
+
+            > [type=button][aria-expanded=true] {
+		@include border-bottom-radius(0);
+                &:before {
+                    transform: rotate(-180deg);
+                }
+
+                ~ .nav-flyout {
+                    display: block;
+                }
+            }
+        }
+    }
+
+    .level2,
+    .level3 {
+        a {
+            color: var(--color-mainmenu-toplevel-text);
+        }
+
+        a:hover,
+        a:focus {
+            color: var(--color-mainmenu-sublevel-hover-text);
+            background-color: var(--color-mainmenu-sublevel-bg);
+	        border-radius: var(--border-radius);
+        }
+    }
+
+    .level3 {
+        a {
+            font-weight: normal;
+
+            @media (max-width: $screen-sm) {
+                //       font-size: 0.9rem;
+                @include px2rem($font-size-nav-level3);	
+            }
+        }
+    }
+
+    /* Fly-Out / secondary navigation */
+    .nav-flyout {
+       background-color: transparent;
+        padding: 50px 0;
+    }
+
+    /* Portal buttons */
+    .button-portal {
+        @include inline-block;
+        font-weight: normal;
+        @include buttonstyle();
+        @include px2rem($font-size-nav-buttons);
+        padding: 0.5rem 1rem;
+        margin-left: 20px;
+        background-color: var(--color-mainmenu-sublevel-bg);
+    }
+
+    ul {
+        @include no-list;
+        margin: 0 0 15px 0;
+        
+        &.level4 {
+            margin: 0;
+        }
+
+        li {
+            @include no-list; /* Necessary because there's a global style setting this to "disc" */
+            padding: 0;
+            
+            /* Fix for Webkit only, because "column-width" doesn't work properly */
+            @supports (not (-moz-appearance: none)) {
+                @media (min-width: $screen-sm) {
+                    width: 330px;
+                }
+              }
+
+            &.current-menu-item > a {
+                color: var(--color-mainmenu-sublevel-hover-text);
+                background-color: var(--color-mainmenu-sublevel-bg);
+                border-radius: var(--border-radius);
+            }
+
+        }
+
+        a {
+            display: inline-block;
+            padding: 7px 20px 7px 13px;
+            width: 100%;
+        }
+    }
+
+    .level2 {
+
+        > li {
+            &.has-sub {
+                page-break-inside: avoid;
+                break-inside: avoid;
+                margin-bottom: 20px;
+            }
+
+            > a {
+                background-color: transparent;
+            }
+        }
+    }
+}
+
+
 /*
 * Larger device
 */
@@ -296,6 +493,110 @@
 
         }
     }
+
+
+    .mainnav-plainview {
+        .navsmall {
+            ul >li{
+                background-color: var(--color-white);
+            } 
+            ul {
+                  background-color: var(--color-white);
+                margin-bottom: 0;
+
+                &.level2 > li {
+		    
+                    &:not(.has-sub) {
+                        > a {
+                            border-bottom: none;
+                        }
+                    }
+
+                    > a {
+			@include px2rem($font-size-nav-level2);
+                        padding-left: var(--width-gutter-half);
+                    }
+                }
+
+                &.level3 a {
+		    @include px2rem($font-size-nav-level3);
+                }
+            }
+
+            .flyout-entries-full {
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                flex-direction: column;
+
+            &.column-count-1, 
+            &.column-count-2, 
+            &.column-count-3, 
+            &.column-count-4 {
+                    ul.level2, ul.level3 {
+                        column-width: 330px;
+                    }
+                    .button-portal {
+                        margin-right: auto;
+                        margin-top: 10px;
+
+                        @media (max-width: $screen-xl) {
+                            margin-left: unset !important;
+                            margin-right: unset !important;
+                        }
+                    }
+                }
+                &.column-count-1 {
+                    ul.level2, ul.level3 {
+                        column-count: 1;
+                    }
+                    .button-portal {
+                        margin-left: 535px;
+                    }
+                }
+                &.column-count-2 {
+                    ul.level2, ul.level3 {
+                        column-count: 2;
+                    }
+                    .button-portal {
+                        margin-left: 361px;
+                    }
+                }
+                &.column-count-3, &.column-count-4 {
+                    ul.level2, ul.level3 {
+                        column-count: 3;
+
+                        @media (max-width: 1029px) {
+                            column-count: 2;
+                        }
+                    }
+                    .button-portal {
+                        margin-left: 187px;
+                    }
+                }
+            }
+
+            .nav-flyout {
+                background-color: transparent;
+                border-top: 8px solid var(--color-mainmenu-sublevel-bg);
+
+                @media (min-width: $screen-sm) {
+                    min-height: 199px;    
+                }
+
+                @media (max-width: $screen-md) {
+                    margin-top: 50px;
+
+                }
+            }
+
+
+        }
+    }
+
+
+
+
 }
 
 #mainnav-toggle,
@@ -425,6 +726,67 @@
         }
     }
 
+    .navsmall {
+        border-top: 1px solid var(--color-primary-ci-hell);
+
+        .nav-flyout {
+            padding: 0;
+        }
+        .flyout-entries-full {
+            display: flex;
+            flex-direction: column;
+            .button-portal {
+                order: 1;
+                margin-top: 10px;
+                padding: 7px 20px 7px var(--width-gutter-half);
+                margin-left: 0;
+                border-bottom: 1px solid var(--color-primary-dunkler);
+                &:hover, &:focus, &:active {
+                    background: var(--color-mainmenu-sublevel-hover-bg);
+                }
+            }
+            ul {
+                order: 2;
+            }
+
+        }
+
+        > li {
+            border-top: 1px solid $colorOverlayDark; // #ccc;
+            &:first-child {
+                border-top-color: transparent;
+            }
+
+            &.level1 {
+                &:hover, &:focus {
+                    border-top: 1px solid var(--color-primary-dunkelste);
+
+                    + li {
+                        border-top: 1px solid var(--color-primary-dunkelste);
+                    }
+                }
+
+
+                > a,
+                > [type=button] {
+                    margin: 0;
+                    cursor: pointer;
+
+                    &[aria-expanded=true] {
+                        background-color: var(--color-primary-dunkler);
+                        color: var(--color-primary-dunkler-kontrast);
+                        border-radius: 0;
+                    }
+
+                    &:hover, &:focus {
+                        background-color: var(--color-primary-dunkelste);
+                        color: var(--color-primary-dunkelste-kontrast);
+                    }
+                }
+            }
+        }
+    }
+
     .no-js #nav:target {
 
         #mainnav-toggle {
@@ -450,6 +812,15 @@
         }
 
         .nav > li.level1 {
+            > a,
+            > [type=button] {
+
+                &:before {
+                    display: block;
+                }
+            }
+        }
+        .navsmall > li.level1 {
             > a,
             > [type=button] {
 
@@ -506,11 +877,52 @@
             @include box-shadow(0 4px 18px rgba(0, 0, 0, 0.05)); 
         }
     }
+    .navsmall {
+        /* All links & buttons */
+        > li {
+            float: left;
+
+            > a,
+            > [type=button] {
+                padding: 10px;
+                border-radius: var(--border-radius);
+            }
+
+            &.has-sub {
+                > a,
+                > [type=button] {
+                    &:before {
+                        display: block;
+                        right: 11px;
+                    }
+                }
+		
+
+            }
+        }
+
+        /* Fly-Out / secondary navigation */
+        .nav-flyout {
+            display: none;
+            position: absolute;
+            z-index: 30;
+            left: 0;
+            right: 0;
+            overflow: hidden;
+            @include box-shadow(0 4px 18px rgba(0, 0, 0, 0.05)); 
+        }
+    }
 }
 
 /* Large device */
 @media (min-width: $screen-md) {
     .nav {
+        .nav-flyout {
+            max-height: calc(100vh - 162px);
+            overflow-y: auto;
+        }
+    }
+    .navsmall {
         .nav-flyout {
             max-height: calc(100vh - 162px);
             overflow-y: auto;
@@ -540,3 +952,20 @@
         }
     }
 }
+
+ul.navsmall {
+    .level1.has-sub {
+      > a.menu-item { // directly inside .level1.has-sub but not in a deeper level
+        display: none;
+      }
+  
+      button.menu-item {
+        display: inline-block; // or whatever display value you prefer for your button
+      }
+  
+      .sub-menu.level2 a.menu-item { // inside ul.sub-menu.level2
+        display: inline-block; // or block or whatever suits your design best
+      }
+    }
+  }
+  
