line-height fixed

--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -146,11 +146,11 @@ Mixins File for Wordpress Theme FAU
     @return math.div($font-size, $base-font-size) + rem;
 }
 
-@mixin px2rem($font-size, $base-font-size: $font-size-gridbase, $line: $font-size * 1.5) {
+@mixin px2rem($font-size, $base-font-size: $font-size-gridbase, $line: $font-size * 1.51) {
     // font-size: $font-size + px; // für den IE8
     // line-height: ($line) + px;
-    font-size: math.div(floor(math.div($font-size, $base-font-size) * 1000), 1000) + rem;
-    line-height: math.div(ceil(math.div($line, $base-font-size) * 1000), 1000)+ rem;
+    font-size: math.div(ceil(math.div($font-size, $base-font-size) * 1000), 1000) + rem;
+    line-height: math.div(ceil(math.div($line, $base-font-size) * 1000), 1000) + rem;
 }
 
 @mixin morelink() {
