--- a/src/sass/structure/header/_branding.scss
+++ b/src/sass/structure/header/_branding.scss
@@ -125,7 +125,7 @@
         a {
             text-decoration: none;
             padding: 15px;
-            margin: -15px;
+            margin: -15px 0;
             display: inline-block;
             &:focus,
             &:hover {
