meta-search 50% wider, footer megamenu: removed underline and fixed border-radius, small responsive fix for metamenu

--- a/src/sass/structure/header/_grid.scss
+++ b/src/sass/structure/header/_grid.scss
@@ -10,11 +10,9 @@
     height: 100%;
 
     @media (min-width: $screen-md) {
-
         width: 100%;
-    }
-    @media (min-width: $screen-md) {
-        width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
     }
     @media (min-width: $screen-xl-min) {
         width: $container-xl;
