--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.3.34-343
+Version: 2.3.34-346
 Requires at least: 6.1
 Tested up to: 6.2
 Requires PHP: 8.0
@@ -9044,7 +9044,7 @@ body.embedded .news-item .news-meta {
 #headerwrapper header .branding a {
   text-decoration: none;
   padding: 15px;
-  margin: -15px 0;
+  margin: -15px;
   display: inline-block;
 }
 #headerwrapper header .branding a:focus, #headerwrapper header .branding a:hover {
